# kbgo

./: .env.example  .gitignore  DOCKER.md  Dockerfile  LICENSE  README.md  TODO.txt  debug.html  docker-compose.override.yml  docker-compose.yml  go.mod  go.sum  main.go
api/kbgo/: kbgo.go
api/rag/: rag.go
config/: config.yaml  config_demo.yaml
core/: indexer.go  message.go  rag.go  retriever.go  store.go
core/agent/: agent_service.go
core/agent_tools/: executor.go
core/cache/: agent_cache.go  redis_client.go
core/chat/: agent_config_loader.go  chat_handler.go  mcp_handler.go  retriever_handler.go  stream_handler.go  tool_mapper.go  tool_selector.go
core/client/: openai_client.go
core/common/: bm25.go  bm25_test.go  chat_model.go  consts.go  embedding.go  file_uploader.go  helper.go  image_url_converter.go  image_url_converter_test.go  init_test.go  message.go  milvus.go  mime_types.go  multimodal.go  recovery.go  recovery_test.go  rerank.go  rerank_test.go  rustfs.go  stream.go  (+5 more)
docker/: .dockerignore  DOCKER.md  Dockerfile  docker-compose.yml
docs/: MCP_DEBUG_INTEGRATION.md  MCP_REFACTOR.md
file_parse/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  start.sh  stop.sh
file_parse/app/: __init__.py  main.py
file_parse/app/api/: __init__.py  routes.py  schemas.py
file_parse/app/config/: settings.py
file_parse/app/core/: __init__.py  chinese_detector.py  chunker.py  image_handler.py  ocr_service.py  parser.py
file_parse/app/utils/: logger.py
file_parse/test_file/: test.docx  test.html  test.xlsx  模版.docx
frontend/: .dockerignore  .env.example  .gitignore  DOCKER_DEPLOYMENT.md  Dockerfile  README.md  debug.html  docker-compose.yml  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  start.sh  vite.config.ts
hack/: config.yaml
milvus_new/: indexer.go
milvus_new_re/: retriever.go  utils.go
(+284 files in other folders)
